--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,11 @@ commands = python setup.py test
 ; requirements.txt with the pinned versions and uncomment the following lines:
 ; deps =
 ;     -r{toxinidir}/requirements.txt
+
+[testenv:flake8]
+deps =
+     flake8
+     mccabe
+     pep8
+     pyflakes
+commands = make flake8
