--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
 sudo: false
 
-deploy:
-  true:
-    condition: $TOXENV == py27
-    repo: kubespray/kpm
-    tags: true
-  distributions: sdist bdist_wheel
-  password: $PYPI_PASSWORD
-  provider: pypi
-  user: ant31
 env:
-- TOXENV=py27
+  - TOXENV=py27
+  - TOXENV=flake8
+
 install: pip install -U tox
 language: python
 script: tox
