--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,13 @@
 [tox]
-envlist = py27
+envlist = py27, flake8
 
 [testenv]
+deps =
+     pytest
+     pytest-cov
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/kpm
-commands = python setup.py test
+commands = /usr/bin/make test
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
@@ -16,5 +19,5 @@ deps =
      flake8
      mccabe
      pep8
-     pyflakes
-commands = make flake8
+;     pyflakes
+commands = python setup.py flake8
