--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,24 @@
 [tox]
-envlist = py27, flake8
+envlist = py27, flake8, coveralls
 
 [testenv]
 deps =
      pytest
      pytest-cov
+     python-coveralls
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/kpm
 commands = /usr/bin/make test
+
+[testenv:coveralls]
+deps =
+     coveralls
+     pytest
+     pytest-cov
+     python-coveralls
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/kpm
+commands = /usr/bin/make coveralls
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
