--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 sudo: false
 
 env:
-  - TOXENV=py27
+  - TOXENV=coveralls
   - TOXENV=flake8
 
 install: pip install -U tox
 language: python
 script: tox
+
+after_success:
+  - coveralls
