Add kubernetes.py tests

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ deps =
      pytest
      pytest-cov
      python-coveralls
+     requests-mock
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/kpm
 commands = /usr/bin/make coveralls
