--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ deps =
      pytest
      pytest-cov
      python-coveralls
+     requests-mock
+
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/kpm
 commands = /usr/bin/make test
