--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, flake8, coveralls
+envlist = py27, flake8, cli
 
 [testenv]
 deps =
@@ -23,15 +23,19 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/kpm
 commands = /usr/bin/make coveralls
 
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+[testenv:cli]
+deps =
+     pytest
+     pytest-cov
+     pytest-ordering
+     requests-mock
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/kpm
+commands = /usr/bin/make test-cli
 
 [testenv:flake8]
 deps =
      flake8
      mccabe
      pep8
-;     pyflakes
 commands = python setup.py flake8
