--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "kpm-website",
+  "name": "kpm-ui",
   "version": "1.0.0",
   "description": "Front-end for KPM API",
   "main": "index.js",
   "scripts": {
-    "start": "gulp serve --dir build --port $PORT",
-    "postinstall": "gulp build --dir build --config $CONFIG_FILE"
+    "start": "gulp serve --dir build --port $PORT"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/kubespray/kpm-website.git"
+    "url": "git+ssh://git@gitlab.com/kubespray/kpm-ui.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/kubespray/kpm-website/issues"
+    "url": "https://gitlab.com/kubespray/kpm-ui/issues"
   },
-  "homepage": "https://gitlab.com/kubespray/kpm-website#README",
+  "homepage": "https://gitlab.com/kubespray/kpm-ui#README",
   "dependencies": {
     "express": "^4.13.4",
     "gulp": "^3.9.1",
@@ -27,5 +26,9 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "yargs": "^4.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
