--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,9 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-
 [bumpversion:file:kpm/__init__.py]
+[bumpversion:file:deploy/Dockerfile]
+[bumpversion:file:deploy/kpm/manifest.yaml]
 
 [wheel]
 universal = 1
