Update travis and tox

--- a/tox.ini
+++ b/tox.ini
@@ -6,26 +6,17 @@ deps =
      pytest
      pytest-cov
      python-coveralls
+     pytest-flask
      requests-mock
 
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/kpm
 commands = /usr/bin/make test
 
-[testenv:coveralls]
-deps =
-     coveralls
-     pytest
-     pytest-cov
-     python-coveralls
-     requests-mock
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/kpm
-commands = /usr/bin/make coveralls
-
 [testenv:cli]
 deps =
      pytest
+     pytest-flask
      pytest-cov
      pytest-ordering
      requests-mock
