--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-
+[bumpversion:file:VERSION]
 [bumpversion:file:kpm/__init__.py]
 
 [bumpversion:file:deploy/Dockerfile]
@@ -17,4 +17,3 @@ universal = 1
 [flake8]
 exclude = docs
 max-line-length = 120
-
