--- a/deploy/kpm-registry/templates/kpm-registry-svc.yaml
+++ b/deploy/kpm-registry/templates/kpm-registry-svc.yaml
@@ -3,13 +3,13 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    k8s-app: kpm
-  name: kpm
+    k8s-app: kpm-registry
+  name: kpm-registry
 spec:
   type: {{svc_type}}
   ports:
     - port: 80
       targetPort: 5000
-      name: kpm
+      name: kpm-registry
   selector:
-    k8s-app: kpm
+    k8s-app: kpm-registry
