--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,17 @@
 [bumpversion]
-current_version = 0.13.0
+current_version = 0.14.0
 commit = True
 tag = True
 
 [bumpversion:file:setup.py]
+
 [bumpversion:file:VERSION]
+
 [bumpversion:file:kpm/__init__.py]
 
 [bumpversion:file:deploy/Dockerfile]
 
-[bumpversion:file:deploy/kpm/manifest.yaml]
+[bumpversion:file:deploy/kpm-registry/manifest.yaml]
 
 [wheel]
 universal = 1
@@ -17,3 +19,4 @@ universal = 1
 [flake8]
 exclude = docs
 max-line-length = 120
+
