--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include AUTHORS.rst
 include HISTORY.rst
 include LICENSE
 include README.md
+include kpm/jsonnet/*.jsonnet
+include kpm/jsonnet/*.libjsonnet
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
