--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include LICENSE
 include README.md
 include kpm/jsonnet/*.jsonnet
 include kpm/jsonnet/*.libjsonnet
+include kpm/jsonnet/lib/*.libjsonnet
 include kpm/jsonnet/manifest.jsonnet.j2
 recursive-include tests *
 recursive-exclude * __pycache__
