Use CNR server (bump 0.23.0)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ env:
 install:
   - pip install -U tox
   - pip install -U coveralls
+  - pip install -U codecov
 
 language: python
 script: tox
 
 after_success:
   - if [ "$TOXENV" == "py27" ] ; then COVERALLS_REPO_TOKEN=P82AXkSpM5itk5JxGTAp8rGkun18v3xgx coveralls ; fi
+  - if [ "$TOXENV" == "py27" ] ; then codecov ; fi
