--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27, flake8, cli
 deps =
      pytest
      pytest-cov
+     pytest-sugar
      python-coveralls
      pytest-flask
      requests-mock
